feat: switch to maven